--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,3 +2,11 @@ body {
   margin: 0px;
   padding: 0px;
 }
+
+
+h1, h2, h3, h4, h5, h6 {
+  font-size: inherit;
+  font-weight: inherit;
+  margin: 0;
+  padding: 0;
+}
